Fix: Overflow removed from profile personal info, order history

--- a/profiles/static/profiles/css/profile.css
+++ b/profiles/static/profiles/css/profile.css
@@ -24,25 +24,3 @@
 #id_default_country option:first-child {
     color: #797979;
 }
-
-/* Order history */
-.personal-info {
-    max-height: 350px;
-    overflow-y: auto;
-}
-
-/* Hiding the scrollbar for the order history */
-.personal-info::-webkit-scrollbar {
-    display: none;
-    }
-
-/* Order history */
-.order-history {
-    max-height: 200px;
-    overflow-y: auto;
-}
-
-/* Hiding the scrollbar for the order history */
-.order-history::-webkit-scrollbar {
-    display: none;
-    }
